--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,127 @@
-/* Format for page */
+* {
+    margin: 0;
+    overflow: auto;
+}
+
+section {
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
+    max-height: 100%;
+}
+
+.hidden {
+    display: none;
+}
+
+h1 {
+    font-weight: bolder;
+    font-size: 7rem;
+    padding: .5em;
+}
+
+h2 {
+    font-weight: bolder;
+    font-size: 2.5rem;
+    padding: 1.25em;
+}
+
+#landing-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #222F73;
+    color: #77BDA8;
+}
+
+#landing-page h1 {
+    text-align: center;
+    padding-bottom: 0px;
+}
+
+.hello {
+    margin-right: .5em;
+}
+
+#landing-page h2 {
+    text-align: center;
+}
+
+.username-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#username {
+    padding-top: 0px;
+    min-width: 15vw;
+    margin-right: .25em;
+}
+
+/*Arrow icon button*/
+.gg-push-chevron-right-o {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 22px;
+    height: 22px;
+    border: 2px solid;
+    border-radius: 100px
+   }
+   
+   .gg-push-chevron-right-o::after,
+   .gg-push-chevron-right-o::before {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    width: 2px;
+    height: 8px;
+    border-right: 2px solid;
+    top: 5px;
+    right: 5px
+   }
+   
+   .gg-push-chevron-right-o::after {
+    width: 6px;
+    height: 6px;
+    border-bottom: 2px solid;
+    transform: rotate(-45deg);
+    right: 9px;
+    top: 6px
+} 
+
+.gg-push-chevron-right-o {
+    color: #77BDA8;
+    background-color: #222F73;
+    --ggs: 6.5;
+}
+
+.arrow-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    width: 150px;
+}
+
+#other-page {
+    background-color: #503659;
+    color: #DEA6A6;
+}
+
+#other-page .container {
+    height: 45vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#other-page .container div {
+    height: 350px;
+    width: 250px;
+    background-color: #DEA6A6;
+}
