--- a/assets/style.css
+++ b/assets/style.css
@@ -162,7 +162,7 @@ h2 {
     align-items: center;
 }
 
-#series .btn-group button {
+#series-movie .btn-group button {
     height: 250px;
     width: 250px;
     background-color: #222F73;
