--- a/assets/style.css
+++ b/assets/style.css
@@ -128,6 +128,7 @@ h2 {
     font-size: 30px;
     font-style: Sans-serif;
     padding: 15px;
+    border-radius: 25px;
 }
 
 .streaming-service .btn-group input {
@@ -188,10 +189,12 @@ h2 {
 }
 
 .series-movie .btn-group button {
+    border-radius: 25px;
     height: 250px;
     width: 250px;
     background-color: #222F73;
-    font-size: x-large;
+    font-size: 32px;
+    color: rgb(74, 233, 74)
 }
 
 .results {
