added classes to html, added apis and logic to display show, some css added

--- a/assets/style.css
+++ b/assets/style.css
@@ -172,6 +172,7 @@ h2 {
     margin: 1em;
     height: 50px;
     width: 100px;
+    color: black;
     background-color: #fcf6c9;
     font-size: x-large;
 }
