--- a/assets/style.css
+++ b/assets/style.css
@@ -164,14 +164,14 @@ h2 {
 .genres {
     /* display: none; */
     padding: 2em;
-    border: 2px solid red;
+    border: 2px solid transparent;
     background-color: #F2F2F2;
     color: #8985F2;
 }
 
 .genres .btn-group {
     max-width: 100vw;
-    border: 2px solid red;
+    border: 2px solid transparent;
     padding: 2em;
     display: flex;
     flex-direction: row;
@@ -214,7 +214,7 @@ h2 {
 }
 
 .series-movie .btn-group {
-    border: solid 2px red;
+    border: solid 2px transparent;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -255,7 +255,7 @@ h2 {
 }
 
 .show-container {
-    border: 2px solid red;
+    border: 2px solid;
     margin: 2em;
     padding: 2em;
     width: 30vw;
