--- a/assets/style.css
+++ b/assets/style.css
@@ -419,7 +419,7 @@ h2 {
     color: #CAC9F2;
 }
 
-.genres .btn-group input[type="checkbox"]:checked+label{
+.genres .btn-group input[type="radio"]:checked+label{
     background-color: #716DF2;
     color: #CAC9F2;
 }
