--- a/assets/style.css
+++ b/assets/style.css
@@ -419,6 +419,7 @@ h6 {
 /* genres page styling */
 .genres {
     border: 2px solid transparent;
+    height: 55vw;
     background-color: #F2F2F2;
     color: #8985F2;
 }
@@ -427,7 +428,7 @@ h6 {
     height: 72vh;
     max-width: 100vw;
     border: 2px solid transparent;
-    padding: 70px 150px;
+    padding: 70px 300px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
