--- a/assets/style.css
+++ b/assets/style.css
@@ -544,8 +544,10 @@ h6 {
     border: 1px solid rgba(255, 255, 255, 0.5);
     margin: 2em;
     padding: 2em;
-    width: fit-content;
+    width: 80vw;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     color: white;
@@ -557,12 +559,13 @@ h6 {
     display: flex;
     flex-direction: column;
     padding: .5em;
-    width: 450px;
+    min-width: 450px;
+    max-width: 450px;
 }
 
 #picture-container {
-    width: 300px;
-    height: 360px;
+    min-width: 300px;
+    min-height: 360px;
     background-color: #000;
     border-radius: 1em;
     background-repeat: no-repeat;
@@ -620,6 +623,7 @@ h6 {
     margin-left: .75em;
     position: relative;
     z-index: 1;
+    margin: .5em;
 }
 
 /* The Modal (background) */
@@ -729,3 +733,10 @@ h6 {
       height: 0%;
     }
   }
+
+@media screen and (max-width: 962px) {
+    #results-video {
+        width: 426px;
+        height: 240px;
+    }
+}
