--- a/assets/style.css
+++ b/assets/style.css
@@ -725,4 +725,37 @@ h6 {
         width: 426px;
         height: 240px;
     }
+h1, h2, h3, h4, h5, h6 {
+    font-size: 3rem;
+}
+.streaming-service .btn-group {
+    height: 312px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: flex-start;
+    margin: 61px;
+}
+.genres .btn-group{
+    max-width: 100vw;
+    border: 2px solid transparent;
+    padding: 70px 300px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 400px;
+}
+
+.series-movie .btn-group {
+    height: 257px;
+    width: 340px;
+    border: solid 2px transparent;
+    display: inline-grid;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 }
