--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 section {
     position: relative;
     height: 100vh;
-    max-height: 100%;
+    width: 100vw;
 }
 
 .background {
@@ -245,7 +245,7 @@ h1 {
 
 h2 {
     font-weight: bolder;
-    font-size: 2.5rem;
+    font-size: 2rem;
     padding: 1.25em;
     font-family: 'Lucida Handwriting',cursive;
     color: #8985f2;
@@ -369,7 +369,7 @@ h6 {
 
 /* Streaming service page styling */
 .streaming-service {
-    padding: 2em;
+    padding: 0;
     background-color: #F2F2F2;
     color: #8985F2;
 }
@@ -427,29 +427,28 @@ h6 {
 }
 
 .genres .btn-group {
-    height: 72vh;
-    max-width: 100vw;
+    height: 20%;
+    width: 90%;
     border: 2px solid transparent;
-    padding: 70px 300px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: inline-block;
+    padding: 4% 6% 8% 8%;
 }
 
 .genres .btn-group label {
-    margin: 1em;
+    margin: 4.5px;
     display: inline-block;
     background-color: #CAC9F2;
     border: solid 2px #716DF2;
     color: #716DF2;
-    height: 4vh;
-    width: 15vw;
-    font-size: 25px;
+    height: 11%;
+    width: 10%;
+    font-size: 13.5px;
     font-style: Sans-serif;
-    padding: 15px;
+    padding: 11px;
     border-radius: 25px;
     justify-content: space-evenly;
     text-align: center;
+
 }
 
 .genres .btn-group label:hover {
@@ -468,19 +467,20 @@ h6 {
 
 /* series or movie page styling */
 .series-movie {
-    padding: 2em;
     background-color: #F2F2F2;
     color: #8985F2;
 }
 
 .series-movie .btn-group {
-    height: 70vh;
-    width: 102vw;
+    height: 30%;
+    width: 55%;
     border: solid 2px transparent;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
+    align-content: center;
+    padding: 2% 22%;
 }
 
 .series-movie .btn-group label {
