--- a/assets/style.css
+++ b/assets/style.css
@@ -722,23 +722,766 @@ h6 {
     }
   }
 
-@media screen and (max-width: 962px) {
+  * {
+    margin: 0;
+    overflow: auto;
+}
+
+section {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #f2f2f2;
+    overflow: hidden;
+}
+
+.background span {
+    width: 20vmin;
+    height: 20vmin;
+    border-radius: 20vmin;
+    backface-visibility: hidden;
+    position: absolute;
+    animation: move;
+    animation-duration: 40;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.background span:nth-child(0) {
+    color: #716df2;
+    top: 69%;
+    left: 46%;
+    animation-duration: 103s;
+    animation-delay: -89s;
+    transform-origin: 3vw -22vh;
+    box-shadow: 40vmin 0 5.429504742992527vmin currentColor;
+}
+
+.background span:nth-child(1) {
+    color: #8985f2;
+    top: 40%;
+    left: 80%;
+    animation-duration: 32s;
+    animation-delay: -95s;
+    transform-origin: -6vw 5vh;
+    box-shadow: 40vmin 0 5.662654326435108vmin currentColor;
+}
+
+.background span:nth-child(2) {
+    color: #cac9f2;
+    top: 83%;
+    left: 73%;
+    animation-duration: 46s;
+    animation-delay: -69s;
+    transform-origin: 10vw -5vh;
+    box-shadow: 40vmin 0 5.6357625038105095vmin currentColor;
+}
+
+.background span:nth-child(3) {
+    color: #cac9f2;
+    top: 3%;
+    left: 25%;
+    animation-duration: 34s;
+    animation-delay: -8s;
+    transform-origin: 12vw -5vh;
+    box-shadow: -40vmin 0 5.145920512606624vmin currentColor;
+}
+
+.background span:nth-child(4) {
+    color: #cac9f2;
+    top: 72%;
+    left: 18%;
+    animation-duration: 46s;
+    animation-delay: -47s;
+    transform-origin: -20vw -9vh;
+    box-shadow: 40vmin 0 5.491964955632967vmin currentColor;
+}
+
+.background span:nth-child(5) {
+    color: #cac9f2;
+    top: 19%;
+    left: 55%;
+    animation-duration: 72s;
+    animation-delay: -8s;
+    transform-origin: 17vw -13vh;
+    box-shadow: -40vmin 0 5.56472295331061vmin currentColor;
+}
+
+.background span:nth-child(6) {
+    color: #716df2;
+    top: 8%;
+    left: 53%;
+    animation-duration: 82s;
+    animation-delay: -81s;
+    transform-origin: -9vw 8vh;
+    box-shadow: 40vmin 0 5.370989050347798vmin currentColor;
+}
+
+.background span:nth-child(7) {
+    color: #8985f2;
+    top: 50%;
+    left: 42%;
+    animation-duration: 82s;
+    animation-delay: -24s;
+    transform-origin: 18vw -1vh;
+    box-shadow: -40vmin 0 5.647023325233482vmin currentColor;
+}
+
+.background span:nth-child(8) {
+    color: #8985f2;
+    top: 60%;
+    left: 7%;
+    animation-duration: 104s;
+    animation-delay: -40s;
+    transform-origin: 1vw -16vh;
+    box-shadow: -40vmin 0 5.700544726788724vmin currentColor;
+}
+
+.background span:nth-child(9) {
+    color: #8985f2;
+    top: 2%;
+    left: 88%;
+    animation-duration: 37s;
+    animation-delay: -17s;
+    transform-origin: 21vw 13vh;
+    box-shadow: 40vmin 0 5.467516796120428vmin currentColor;
+}
+
+.background span:nth-child(10) {
+    color: #716df2;
+    top: 88%;
+    left: 18%;
+    animation-duration: 83s;
+    animation-delay: -94s;
+    transform-origin: -5vw 14vh;
+    box-shadow: -40vmin 0 5.477085335653413vmin currentColor;
+}
+
+.background span:nth-child(11) {
+    color: #8985f2;
+    top: 24%;
+    left: 57%;
+    animation-duration: 45s;
+    animation-delay: -8s;
+    transform-origin: -24vw 17vh;
+    box-shadow: -40vmin 0 5.650205905112912vmin currentColor;
+}
+
+.background span:nth-child(12) {
+    color: #8985f2;
+    top: 22%;
+    left: 39%;
+    animation-duration: 85s;
+    animation-delay: -19s;
+    transform-origin: 3vw -2vh;
+    box-shadow: 40vmin 0 5.040873522429218vmin currentColor;
+}
+
+.background span:nth-child(13) {
+    color: #716df2;
+    top: 5%;
+    left: 24%;
+    animation-duration: 88s;
+    animation-delay: -35s;
+    transform-origin: -24vw 18vh;
+    box-shadow: -40vmin 0 5.4400361363248955vmin currentColor;
+}
+
+.background span:nth-child(14) {
+    color: #cac9f2;
+    top: 23%;
+    left: 14%;
+    animation-duration: 102s;
+    animation-delay: -44s;
+    transform-origin: -5vw -4vh;
+    box-shadow: -40vmin 0 5.039197209027951vmin currentColor;
+}
+
+.background span:nth-child(15) {
+    color: #8985f2;
+    top: 35%;
+    left: 82%;
+    animation-duration: 83s;
+    animation-delay: -1s;
+    transform-origin: 8vw 12vh;
+    box-shadow: 40vmin 0 5.563554587184538vmin currentColor;
+}
+
+.background span:nth-child(16) {
+    color: #8985f2;
+    top: 59%;
+    left: 42%;
+    animation-duration: 62s;
+    animation-delay: -67s;
+    transform-origin: -10vw -11vh;
+    box-shadow: -40vmin 0 5.90046834117709vmin currentColor;
+}
+
+.background span:nth-child(17) {
+    color: #cac9f2;
+    top: 82%;
+    left: 26%;
+    animation-duration: 97s;
+    animation-delay: -65s;
+    transform-origin: -10vw -5vh;
+    box-shadow: -40vmin 0 5.538892821508381vmin currentColor;
+}
+
+.background span:nth-child(18) {
+    color: #8985f2;
+    top: 48%;
+    left: 20%;
+    animation-duration: 89s;
+    animation-delay: -79s;
+    transform-origin: 14vw -24vh;
+    box-shadow: 40vmin 0 5.3402692768083915vmin currentColor;
+}
+
+.background span:nth-child(19) {
+    color: #8985f2;
+    top: 71%;
+    left: 79%;
+    animation-duration: 33s;
+    animation-delay: -99s;
+    transform-origin: 22vw -15vh;
+    box-shadow: -40vmin 0 5.796720275744413vmin currentColor;
+}
+
+
+#hidden {
+    display: none;
+}
+
+h1 {
+    font-weight: bolder;
+    font-size: 5rem;
+    font-family: 'Lucida Handwriting',cursive;
+    color: #8985f2;
+}
+
+h2 {
+    font-weight: bolder;
+    font-size: 2rem;
+    padding: 1.25em;
+    font-family: 'Lucida Handwriting',cursive;
+    color: #8985f2;
+}
+
+h3 {
+    font-weight: bolder;
+    font-size: 5rem;
+    text-align: center;
+    color: #8985f2;
+}
+
+h4 {
+    font-weight: bolder;
+    font-size: 5rem;
+    text-align: center;
+    color: #8985f2;
+}
+
+h5 {
+    font-weight: bolder;
+    font-size: 5rem;
+    text-align: center;
+    color: #8985f2;
+}
+
+h6 {
+    font-weight: bolder;
+    font-size: 5rem;
+    color: #8985f2;
+}
+
+.landing-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #F2F2F2;
+    color: #8985F2;
+}
+
+.landing-page h1 {
+    text-align: center;
+    padding-bottom: 0;
+}
+
+.landing-page h2 {
+    padding-top: 0;
+    text-align: center;
+}
+
+.index-btn-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+/*Arrow icon button*/
+.gg-push-chevron-right-o {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 22px;
+    height: 22px;
+    border: 2px solid;
+    border-radius: 100px
+   }
+   
+   .gg-push-chevron-right-o::after,
+   .gg-push-chevron-right-o::before {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    width: 2px;
+    height: 8px;
+    border-right: 2px solid;
+    top: 5px;
+    right: 5px
+   }
+   
+   .gg-push-chevron-right-o::after {
+    width: 6px;
+    height: 6px;
+    border-bottom: 2px solid;
+    transform: rotate(-45deg);
+    right: 9px;
+    top: 6px
+} 
+
+.gg-push-chevron-right-o {
+    color: #F2A649;
+}
+
+.back {
+    transform: scale(6) scaleX(-1);
+    margin-right: 1em;
+}
+
+.proceed {
+    transform: scale(6);
+    margin-left: 1em;
+}
+
+.generate {
+    transform: scale(6);
+}
+
+.gg-push-chevron-right-o:hover {
+    color: #f78a06;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.arrow-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    width: 150px;
+}
+
+/* Streaming service page styling */
+.streaming-service {
+    padding: 0;
+    background-color: #F2F2F2;
+    color: #8985F2;
+}
+
+.streaming-service .btn-group {
+    height: 28%;
+    width: 88%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0% 6%;
+}
+
+.streaming-service .btn-group label {
+    display: inline-block;
+    background-color: #CAC9F2;
+    border: solid 2px #716DF2;
+    color: #716DF2;
+    font-size: 30px;
+    font-style: Sans-serif;
+    padding: 15px;
+    border-radius: 25px;
+}
+
+.streaming-service .btn-group input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+} 
+
+.streaming-service .btn-group label:hover {
+    background-color: #716DF2;
+    color:#CAC9F2 
+} 
+
+.streaming-service .btn-group input[type="radio"]:checked+label{
+    background-color: #716DF2;
+    color: #CAC9F2;
+}
+
+#video-stream {
+    display: flex;
+    align-items: center;
+    width: 1036px; 
+    height: 583px;
+}
+
+/* genres page styling */
+.genres {
+    border: 2px solid transparent;
+    height: 55vw;
+    background-color: #F2F2F2;
+    color: #8985F2;
+}
+
+.genres .btn-group {
+    height: 20%;
+    width: 90%;
+    border: 2px solid transparent;
+    display: inline-block;
+    padding: 4% 6% 8% 8%;
+}
+
+.genres .btn-group label {
+    margin: 4.5px;
+    display: inline-block;
+    background-color: #CAC9F2;
+    border: solid 2px #716DF2;
+    color: #716DF2;
+    height: 11%;
+    width: 10%;
+    font-size: 13.5px;
+    font-style: Sans-serif;
+    padding: 11px;
+    border-radius: 25px;
+    justify-content: space-evenly;
+    text-align: center;
+
+}
+
+.genres .btn-group label:hover {
+    background-color: #716DF2;
+    color: #CAC9F2;
+}
+
+.genres .btn-group input[type="radio"]:checked+label{
+    background-color: #716DF2;
+    color: #CAC9F2;
+}
+
+.genres .btn-group input {
+    display:none;
+}
+
+/* series or movie page styling */
+.series-movie {
+    background-color: #F2F2F2;
+    color: #8985F2;
+}
+
+.series-movie .btn-group {
+    height: 30%;
+    width: 55%;
+    border: solid 2px transparent;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    padding: 2% 22%;
+}
+
+.series-movie .btn-group label {
+    padding: 2%;
+    border: solid 2px #716DF2;
+    border-radius: 25px;
+    height: 60px;
+    width: 200px;
+    background-color:#CAC9F2;
+    color: #716DF2;
+    font-size: 40px; 
+    text-align: center;
+}
+
+.series-movie .btn-group label:hover {
+    background-color: #716DF2;
+    color: #CAC9F2;
+}
+
+.series-movie .btn-group input[type="radio"]:checked+label{
+    background-color: #716DF2;
+    color: #CAC9F2;
+}
+
+.series-movie .btn-group input {
+    display: none;
+}
+
+/* results page styling */
+.results {
+    height: fit-content;
+    min-height: 100vh;
+    background-color: white;
+    color: #F07900;
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.results h1 {
+    text-align: center;
+    color: #716df2;
+}
+
+.show-container {
+    border: 1px solid #716DF2;
+    margin: 2em;
+    padding: 2em;
+    width: 80vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    background-color: #8985f2;
+    border-radius: 1em 0 0 1em;
+}
+
+#show-information-container {
+    display: flex;
+    flex-direction: column;
+    padding: .5em;
+    min-width: 450px;
+    max-width: 450px;
+}
+
+#picture-container {
+    min-width: 300px;
+    min-height: 360px;
+    background-color: #000;
+    border-radius: 1em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100% 100%;
+}
+
+#cast {
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-top: .25em;
+    font-size: 1rem;
+    color: white;
+}
+
+#overview {
+    padding-left: 2.3em;
+    padding-top: 1em;
+    padding-right: 2.3em;
+    font-size: 1rem;
+    color: white;
+}
+
+.title-year-container h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    color: #F9B931;
+    text-align: center;
+}
+
+.title-year-container h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    color: #F9B931;
+    text-align: center;
+}
+
+
+#title {
+    padding: .5em;
+    font-size: 2rem;
+}
+
+#year {
+    font-size: 1rem;
+    padding: 0;
+}
+
+#results-video {
+    flex-shrink: 0;
+    margin-left: .75em;
+    position: relative;
+    z-index: 1;
+    margin: .5em;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+.loading-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #716DF2;
+}
+
+  /*LOADING PAGE LOADER ANIMATION*/
+  .loader {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    border: 4px solid #Fff;
+    animation: loader 2s infinite ease;
+  }
+  
+  .loader-inner {
+    vertical-align: top;
+    display: inline-block;
+    width: 100%;
+    background-color: #fff;
+    animation: loader-inner 2s infinite ease-in;
+  }
+  
+  @keyframes loader {
+    0% {
+      transform: rotate(0deg);
+    }
+    
+    25% {
+      transform: rotate(180deg);
+    }
+    
+    50% {
+      transform: rotate(180deg);
+    }
+    
+    75% {
+      transform: rotate(360deg);
+    }
+    
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes loader-inner {
+    0% {
+      height: 0%;
+    }
+    
+    25% {
+      height: 0%;
+    }
+    
+    50% {
+      height: 100%;
+    }
+    
+    75% {
+      height: 100%;
+    }
+    
+    100% {
+      height: 0%;
+    }
+  }
+
+  @media screen and (max-width: 962px) {
     #results-video {
         width: 426px;
         height: 240px;
     }
-
-    h1, h2, h3, h4, h5 {
+    h1, h2, h3, h4, h5, h6 {
         font-size: 3rem;
-
     }
-
     .streaming-service .btn-group {
+        height: 312px;
         display: flex;
         justify-content: center;
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
         align-content: flex-start;
+        margin: 61px;
     }
+    .genres .btn-group{
+        max-width: 100vw;
+        border: 2px solid transparent;
+        padding: 70px 300px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        height: 400px;
+    }
+
+    .series-movie .btn-group {
+        height: 257px;
+        width: 340px;
+        border: solid 2px transparent;
+        display: inline-grid;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    
 }
